Trued up the action bar.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -53,8 +53,8 @@ admin.report_nav=Reporting
 admin.setting=Settings Manager
 admin.setting.addresszonetabs.locations=Locations
 admin.setting.createaddresszone=Create New Address Zone
-admin.setting.createaddresszonelocation=Add Address Zone Location
-admin.setting.createaddresszonelocation_nav=Add Address Zone Location
+admin.setting.createaddresszonelocation=Add Location to Zone
+admin.setting.createaddresszonelocation_nav=Add Location to Zone
 admin.setting.default=Setting Dashboard
 admin.setting.settingtabs.advanced=Advanced Settings
 admin.setting.settingtabs.order=Order Settings
@@ -155,6 +155,7 @@ define.QVOMAX=QVOMAX
 define.QVOMAX.full=Quantity Max Per Order
 define.QVOMIN=QVOMIN
 define.QVOMIN.full=Quantity Min Per Order
+define.action=Action
 define.actions=Actions
 define.active=Active
 define.all=All
