Account list and edit views

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,13 @@
-
+#Created by JInto - www.guh-software.de
+#Tue Mar 20 10:29:57 EDT 2012
 admin.account=Account Manager
+admin.account.accounttabs.addresses=Addresses
+admin.account.accounttabs.carts=Carts
+admin.account.accounttabs.customattributes=Custom Attributes
+admin.account.accounttabs.login=Login Info
+admin.account.accounttabs.orders=Orders
+admin.account.accounttabs.pricegroups=Price Groups
+admin.account.accounttabs.productreviews=Product Reviews
 admin.account_nav=Accounts
 admin.define.create=Create ${itemEntityName}
 admin.define.create_nav=Create New ${itemEntityName}
@@ -14,8 +22,8 @@ admin.define.detail=${itemEntityName} Detail
 admin.define.detail_nav=View ${itemEntityName}
 admin.define.detail_title=View ${itemEntityName}
 admin.define.edit=Edit ${itemEntityName}
-admin.define.edit_nav=Edit ${itemEnityName}
-admin.define.edit_title=Edit ${itemEnityName}
+admin.define.edit_nav=Edit ${itemEntityName}
+admin.define.edit_title=Edit ${itemEntityName}
 admin.define.list=${itemEntityName} Listing
 admin.define.list_nav=${itemEntityNamePlural}
 admin.define.list_title=View A List of ${itemEntityNamePlural}
