Vendor admin UI updates

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Mar 20 10:29:57 EDT 2012
+#Tue Mar 20 15:15:19 EDT 2012
 admin.account=Account Manager
 admin.account.accounttabs.addresses=Addresses
 admin.account.accounttabs.carts=Carts
@@ -78,6 +78,9 @@ admin.setting.updateslatwall_confirm=ARE YOU SURE YOU WANT TO UPDATE SLATWALL
 admin.setting.updateslatwall_success=Slatwall updated successfully
 admin.setting_nav=Settings
 admin.vendor=Vendor Manager
+admin.vendor.vendortabs.vendoraddresses=Addresses
+admin.vendor.vendortabs.vendorbrands=Brands
+admin.vendor.vendortabs.vendororders=Orders
 admin.vendor_nav=Vendors
 admin.warehouse=Warehouse Manager
 admin.warehouse_nav=Warehouse
@@ -758,6 +761,7 @@ entity.user.company=company
 entity.user.firstName=firstName
 entity.user.lastName=lastName
 entity.user.muraUserID=muraUserID
+entity.vendor=Vendor
 entity.vendor.accountNumber=Account Number
 entity.vendor.emailAddresses=Email Addresses
 entity.vendor.numberBrands=Brands Offered
@@ -766,6 +770,7 @@ entity.vendor.vendorID=Vendor ID
 entity.vendor.vendorName=Vendor Name
 entity.vendor.vendorOrderType=Order Type
 entity.vendor.vendorWebsite=Vendor Website
+entity.vendorAddress=Vendor Address
 entity.vendorOrder.subtotal=Subtotal
 entity.vendorOrder.taxTotal=Tax
 entity.vendorOrder.total=Total
@@ -775,10 +780,12 @@ entity.vendorOrder.vendorOrderCreatedDateTime=Date Created
 entity.vendorOrder.vendorOrderNumber=Order Number
 entity.vendorOrder.vendorOrderType=Order Type
 entity.vendorOrder.vendorOrderid=Vendor Order ID
+entity.vendorOrder_plural=Vendor Orders
 entity.vendorOrderitem.detail.cost=Cost
 entity.vendorOrderitem.detail.extendedCost=Extended Cost
 entity.vendorOrderitem.quantityIn=Quantity In
 entity.vendorOrderitem.stockLocation=Location
+entity.vendor_plural=Vendors
 entity.vendoraddress.address=address
 entity.vendoraddress.vendor=vendor
 entity.vendoraddress.vendorAddressID=vendorAddressID
