Updated some of the logic behind rb keys

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,4 @@
-#Created by JInto - www.guh-software.de
-#Tue Mar 20 10:29:57 EDT 2012
+
 admin.account=Account Manager
 admin.account.accounttabs.addresses=Addresses
 admin.account.accounttabs.carts=Carts
@@ -28,7 +27,7 @@ admin.define.list=${itemEntityName} Listing
 admin.define.list_nav=${itemEntityNamePlural}
 admin.define.list_title=View A List of ${itemEntityNamePlural}
 admin.define.save_error=There was an error trying to save the ${itemEntityName}.
-admin.define.save_sucess=The ${itemEntityName} was saved sucessfully.
+admin.define.save_success=The ${itemEntityName} was saved sucessfully.
 admin.export.list=Export Entire List
 admin.export.listfiltered=Export Filtered List
 admin.help=Help
@@ -277,11 +276,13 @@ entity.address.stateCode_validateRequired=Please enter a valid State
 entity.address.street2Address=Street Address 2
 entity.address.streetAddress=Street Address
 entity.address.streetAddress_validateRequired=Please enter a vaild Street Address
+entity.addresszone=Address Zone
 entity.addresszone.addressZoneID=Address Zone ID
 entity.addresszone.addressZoneLocations=Address Zone Locations
 entity.addresszone.addressZoneName=Address Zone Name
 entity.addresszone.delete_validateIsDeletable=This Address Zone cannot be deleted because it is in use.
 entity.addresszone.norecords=No Address Zones Defined
+entity.addresszone_plural=Address Zones
 entity.addresszonelocation.addressZone=Address Zone
 entity.addresszonelocation.addressZoneLocationID=Address Zone Location ID
 entity.attribute.attributeClassType=attributeClassType
