updates to setting section

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -324,6 +324,8 @@ entity.attributeoption.attributeOptionID=attributeOptionID
 entity.attributeoption.attributeOptionLabel=Label
 entity.attributeoption.attributeOptionValue=Value
 entity.attributeoption.sortOrder=Sort Order
+entity.attributeset=Attribute Set
+entity.attributeset_plural=Attribute Sets
 entity.attributevalue.account=account
 entity.attributevalue.attribute=attribute
 entity.attributevalue.attributeValue=attributeValue
@@ -364,6 +366,9 @@ entity.define.norecords=There are no ${entityNamePlural} defined.
 entity.define.remoteID=Remote ID
 entity.define.urlTitle=URL Title
 entity.fulfillment=Fulfillment
+entity.fulfillmentmethod=Fulfillment Method
+entity.fulfillmentmethod.fulfillmentmethodname=Fulfillment Method Name
+entity.fulfillmentmethod_plural=Fulfillment Methods
 entity.image.imageDescription=Image Description
 entity.image.imageName=Image Name
 entity.image.imageType=Image Type
@@ -372,10 +377,12 @@ entity.integration.dataActiveFlag=Data Integration Active
 entity.integration.integrationName=Integration Name
 entity.integration.paymentActiveFlag=Payment Integration Active
 entity.integration.shippingActiveFlag=Shipping Integration Active
+entity.location=Location
 entity.location.locationID=Location ID
 entity.location.locationName=Location Name
 entity.location.sellStockOnWeb=Sell Stock On Web
 entity.location.sellStockOnWebWholesale=Sell Stock On Web Wholesale
+entity.location_plural=Locations
 entity.option=Product Option
 entity.option.optionCode=Option Code
 entity.option.optionDescription=Option Description
@@ -470,8 +477,10 @@ entity.ordershipping.orderShippingItems=orderShippingItems
 entity.ordershipping.shippingMethod=shippingMethod
 entity.paymentMethod.creditCard=Credit Card
 entity.paymentMethod.paymentMethodCode=Payment Method Code
+entity.paymentmethod=Payment Method
 entity.paymentmethod.paymentMethodID=Payment Method ID
 entity.paymentmethod.providerGateway=Payment Provider Gateway
+entity.paymentmethod_plural=Payment Methods
 entity.postalcode.city=city
 entity.postalcode.country=country
 entity.postalcode.latitude=latitude
@@ -626,10 +635,11 @@ entity.purchaseorderitem.purchaseOrderItemID=purchaseOrderItemID
 entity.purchaseorderitem.quantityOrdered=quantityOrdered
 entity.purchaseorderitem.quantityReceived=quantityReceived
 entity.purchaseorderitem.stock=stock
-entity.roundingRule=Rounding Rule
 entity.roundingRule.roundingRuleExpression=Rounding Rule Expression
 entity.roundingRule.roundingRuleExpression_hint=This sting allows you to define how you would like to round a value.  For example to round to the nearest .49 or .99 this would be your rounding ule expression\: .49,.99
 entity.roundingRule.roundingRuleName=Rounding Rule Name
+entity.roundingrule=Rounding Rule
+entity.roundingrule_plural=Rounding Rules
 entity.session.account=account
 entity.session.cart=cart
 entity.session.sessionID=sessionID
@@ -749,11 +759,15 @@ entity.subscriptionterm_plural=Subscription Terms
 entity.taxCategory.taxCategoryName=Category Name
 entity.taxCategoryRate.addressZone=Address Zone
 entity.taxCategoryRate.taxRate=Tax Rate (example use 8.75 for 8.75%)
+entity.taxcategory=Tax Category
+entity.taxcategory_plural=Tax Categories
+entity.term=Term
 entity.term.termDays=Term Days
 entity.term.termHours=Term Hours
 entity.term.termMonths=Term Months
 entity.term.termName=Term Name
 entity.term.termYears=Term Years
+entity.term_plural=Terms
 entity.type.childTypes=childTypes
 entity.type.parentType=parentType
 entity.type.systemCode=systemCode
