bugfix and working on fulfillment.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -64,6 +64,7 @@ admin.setting.createaddresszone=Create New Address Zone
 admin.setting.createaddresszonelocation=Add Location to Zone
 admin.setting.createaddresszonelocation_nav=Add Location to Zone
 admin.setting.default=Setting Dashboard
+admin.setting.fulfillmentmethodtypes.shippingtabs.shippingmethods=Shipping Methods
 admin.setting.settingtabs.advanced=Advanced Settings
 admin.setting.settingtabs.order=Order Settings
 admin.setting.settingtabs.product=Product Settings
@@ -368,6 +369,7 @@ entity.define.urlTitle=URL Title
 entity.fulfillment=Fulfillment
 entity.fulfillmentmethod=Fulfillment Method
 entity.fulfillmentmethod.fulfillmentmethodname=Fulfillment Method Name
+entity.fulfillmentmethod.fulfillmentmethodtype=Fulfillment Method Type
 entity.fulfillmentmethod_plural=Fulfillment Methods
 entity.image.imageDescription=Image Description
 entity.image.imageName=Image Name
