Working on payment & fulfillment methods.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -65,6 +65,9 @@ admin.setting.createaddresszonelocation=Add Location to Zone
 admin.setting.createaddresszonelocation_nav=Add Location to Zone
 admin.setting.default=Setting Dashboard
 admin.setting.fulfillmentmethodtypes.shippingtabs.shippingmethods=Shipping Methods
+admin.setting.paymentmethodtypes.cashtabs.settings=Cash Settings
+admin.setting.paymentmethodtypes.creditcardtabs.settings=Credit Card Settings
+admin.setting.paymentmethodtypes.giftcardtabs.settings=Gift Card Settings
 admin.setting.settingtabs.advanced=Advanced Settings
 admin.setting.settingtabs.order=Order Settings
 admin.setting.settingtabs.product=Product Settings
@@ -481,6 +484,8 @@ entity.paymentMethod.creditCard=Credit Card
 entity.paymentMethod.paymentMethodCode=Payment Method Code
 entity.paymentmethod=Payment Method
 entity.paymentmethod.paymentMethodID=Payment Method ID
+entity.paymentmethod.paymentmethodname=Payment Method Name
+entity.paymentmethod.paymentmethodtype=Payment Method Type
 entity.paymentmethod.providerGateway=Payment Provider Gateway
 entity.paymentmethod_plural=Payment Methods
 entity.postalcode.city=city
