--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -64,6 +64,7 @@ admin.setting.createaddresszone=Create New Address Zone
 admin.setting.createaddresszonelocation=Add Location to Zone
 admin.setting.createaddresszonelocation_nav=Add Location to Zone
 admin.setting.default=Setting Dashboard
+admin.setting.deleteaddresszonelocation_success=The location has successfully been removed from this Address Zone.
 admin.setting.fulfillmentmethodtypes.shippingtabs.shippingmethods=Shipping Methods
 admin.setting.paymentmethodtypes.cashtabs.settings=Cash Settings
 admin.setting.paymentmethodtypes.creditcardtabs.settings=Credit Card Settings
