finished up tax categories and added some new redirect functionality

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -72,6 +72,7 @@ admin.setting.paymentmethodtypes.giftcardtabs.settings=Gift Card Settings
 admin.setting.settingtabs.advanced=Advanced Settings
 admin.setting.settingtabs.order=Order Settings
 admin.setting.settingtabs.product=Product Settings
+admin.setting.taxcategorytabs.rates=Tax Rates
 admin.setting.updateProductCache_success=Product Cache Update Started
 admin.setting.updateSkuCache=Update Sku Cache
 admin.setting.updateSkuCache_success=Sku Cache Update Started
@@ -766,9 +767,11 @@ entity.subscriptionbenifit_plural=Subscription Benifits
 entity.subscriptionterm_plural=Subscription Terms
 entity.taxCategory.taxCategoryName=Category Name
 entity.taxCategoryRate.addressZone=Address Zone
-entity.taxCategoryRate.taxRate=Tax Rate (example use 8.75 for 8.75%)
+entity.taxCategoryRate.taxRate=Tax Rate
 entity.taxcategory=Tax Category
 entity.taxcategory_plural=Tax Categories
+entity.taxcategoryrate=Tax Category Rate
+entity.taxcategoryrate_plural=Tax Category Rates
 entity.term=Term
 entity.term.termDays=Term Days
 entity.term.termHours=Term Hours
