Few changes to subscription model

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -754,14 +754,11 @@ entity.stockreceiver=Stock Receiver
 entity.stockreceiver.boxCount=Box Count
 entity.stockreceiver.packingSlipNumber=Packing Slip Number
 entity.stockreceiver_plural=Stock Receivers
-entity.subscriptionBenefit.accessCodeType=Access Code Type
+entity.subscriptionBenefit.accessType=Access Type
 entity.subscriptionBenefit.categories=Categories
-entity.subscriptionBenefit.categoryQuantity=License Count (Category)
-entity.subscriptionBenefit.contentQuantity=License Count (Content)
 entity.subscriptionBenefit.contents=Contents
-entity.subscriptionBenefit.priceGroupQuantity=License Count (Price Group)
+entity.subscriptionBenefit.maxUseCount=Max Use Count
 entity.subscriptionBenefit.priceGroups=Price Groups
-entity.subscriptionBenefit.promotionQuantity=License Count (Promotion)
 entity.subscriptionBenefit.promotions=Promotions
 entity.subscriptionBenefit.subscriptionBenefitName=Subscription Benefit Name
 entity.subscriptionTerm.allowProrateFlag=Allow Prorate
@@ -773,8 +770,8 @@ entity.subscriptionTerm.renewalTerm=Renewal Term
 entity.subscriptionTerm.subscriptionBenefits=Subscription Benefits
 entity.subscriptionTerm.subscriptionTermName=Subscription Term Name
 entity.subscriptionbenefit=Subscription Benefit
-entity.subscriptionbenefit_plural=Subscription Benifits
-entity.subscriptionbenifit_plural=Subscription Benifits
+entity.subscriptionbenefit_plural=Subscription Benefits
+entity.subscriptionbenifit_plural=Subscription Benefits
 entity.subscriptionterm=Subscription Term
 entity.subscriptionterm_plural=Subscription Terms
 entity.taxCategory.taxCategoryName=Category Name
