Added a System tab and cleaned up a couple product things.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,4 @@
-#Created by JInto - www.guh-software.de
-#Tue Mar 20 23:57:01 EDT 2012
+
 admin.account=Account Manager
 admin.account.accounttabs.addresses=Addresses
 admin.account.accounttabs.carts=Carts
@@ -207,6 +206,7 @@ define.save=Save
 define.select=Select
 define.selectall=Select All
 define.show=Show
+define.system=System
 define.true=True
 define.username=Username
 define.yes=Yes
