Updated the action bar for multiple create actions.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -53,6 +53,9 @@ admin.pricing_nav=Pricing
 admin.product=Product Manager
 admin.product.brandtabs.products=Products
 admin.product.brandtabs.vendors=Vendors
+admin.product.createcontentaccessproduct_nav=New Content Access Product
+admin.product.createmerchandiseproduct_nav=New Merchandise Product
+admin.product.createsubscriptionproduct_nav=New Subscription Product
 admin.product.producttabs.alternateimages=Alternate Images
 admin.product.producttabs.customattributes=Custom Attributes
 admin.product.producttabs.productcategories=Product Categories
@@ -187,6 +190,7 @@ define.all=All
 define.autoIncrement=Auto Increment
 define.backtolist=Back To List
 define.cancel=Cancel
+define.create=Create
 define.definedin=Defined In
 define.delete=Delete
 define.detail=Detail
