Getting Hierarchy list dialed in.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -54,8 +54,11 @@ admin.product=Product Manager
 admin.product.brandtabs.products=Products
 admin.product.brandtabs.vendors=Vendors
 admin.product.createcontentaccessproduct_nav=New Content Access Product
+admin.product.createcontentaccessproducttype_nav=New Content Access Product Type
 admin.product.createmerchandiseproduct_nav=New Merchandise Product
+admin.product.createmerchandiseproducttype_nav=New Merchandise Product Type
 admin.product.createsubscriptionproduct_nav=New Subscription Product
+admin.product.createsubscriptionproducttype_nav=New Subscription Product Type
 admin.product.producttabs.alternateimages=Alternate Images
 admin.product.producttabs.customattributes=Custom Attributes
 admin.product.producttabs.productcategories=Product Categories
@@ -819,11 +822,13 @@ entity.term.termMonths=Term Months
 entity.term.termName=Term Name
 entity.term.termYears=Term Years
 entity.term_plural=Terms
+entity.type=Type
 entity.type.childTypes=childTypes
 entity.type.parentType=parentType
 entity.type.systemCode=systemCode
 entity.type.type=Type
 entity.type.typeID=typeID
+entity.type_plural=Types
 entity.user.company=company
 entity.user.firstName=firstName
 entity.user.lastName=lastName
