working on content and category

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -365,6 +365,10 @@ entity.brand.brandWebsite=Brand Website
 entity.brand.delete_Validateisassigned=Brand cannot be deleted because it has been assigned to products
 entity.brand.delete_success=Brand deleted
 entity.brand_plural=Brands
+entity.category=Category
+entity.category_plural=Categories
+entity.category.categoryName=Category Name
+entity.category.restrictAccessFlag=Restrict Access
 entity.cart.account=account
 entity.cart.cartID=cartID
 entity.cart.cartItems=cartItems
@@ -373,9 +377,15 @@ entity.cartitem.cartItemID=cartItemID
 entity.cartitem.quantity=quantity
 entity.cartitem.sku=sku
 entity.comment.comment=Comment
-entity.contentproduct.contentID=contentID
-entity.contentproduct.contentProductID=contentProductID
-entity.contentproduct.product=product
+entity.content=Content
+entity.content.allowPurchaseFlag=Would you like to sell this content?
+entity.content.contentID=Content ID
+entity.content.restrictAccessFlag=Restrict access through subscription and/or purchase
+entity.content.templateFlag=Use this as a template for Product/Brand/Product Type
+entity.content.productListingFlag=Use as a product listing page
+entity.content.showProductInSubPagesFlag=Show product in sub pages
+entity.content.disableProductAssignmentFlag=Disable product assignment
+entity.content.defaultProductsPerPage=Default number of products per page
 entity.country.countryCode=Country Code
 entity.country.countryName=Country Name
 entity.creditcardtransaction.authorizationcode=Auth. Code
