Updates to vendor and account views

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,4 +1,5 @@
-
+#Created by JInto - www.guh-software.de
+#Thu Mar 22 13:14:48 EDT 2012
 admin.account=Account Manager
 admin.account.accounttabs.addresses=Addresses
 admin.account.accounttabs.carts=Carts
@@ -268,11 +269,13 @@ entity.accountPaymentMethodCreditCard.expirationMonth=Expiration Month
 entity.accountPaymentMethodCreditCard.expirationYear=Expiration Year
 entity.accountPaymentMethodCreditCard.nameOnCreditCard=Name On Card
 entity.account_plural=Accounts
+entity.accountaddress=Account Address
 entity.accountaddress.account=account
 entity.accountaddress.accountAddressID=accountAddressID
 entity.accountaddress.accountAddressName=Nick Name
 entity.accountaddress.accountAddressType=Address Type
 entity.accountaddress.address=Address
+entity.accountaddress_plural=Account Addresses
 entity.accountemailaddress.account=Account
 entity.accountemailaddress.accountEmailAddressID=Account Email ID
 entity.accountemailaddress.emailaddress=Email Address
@@ -365,10 +368,6 @@ entity.brand.brandWebsite=Brand Website
 entity.brand.delete_Validateisassigned=Brand cannot be deleted because it has been assigned to products
 entity.brand.delete_success=Brand deleted
 entity.brand_plural=Brands
-entity.category=Category
-entity.category_plural=Categories
-entity.category.categoryName=Category Name
-entity.category.restrictAccessFlag=Restrict Access
 entity.cart.account=account
 entity.cart.cartID=cartID
 entity.cart.cartItems=cartItems
@@ -376,16 +375,20 @@ entity.cartitem.cart=cart
 entity.cartitem.cartItemID=cartItemID
 entity.cartitem.quantity=quantity
 entity.cartitem.sku=sku
+entity.category=Category
+entity.category.categoryName=Category Name
+entity.category.restrictAccessFlag=Restrict Access
+entity.category_plural=Categories
 entity.comment.comment=Comment
 entity.content=Content
 entity.content.allowPurchaseFlag=Would you like to sell this content?
 entity.content.contentID=Content ID
-entity.content.restrictAccessFlag=Restrict access through subscription and/or purchase
-entity.content.templateFlag=Use this as a template for Product/Brand/Product Type
-entity.content.productListingFlag=Use as a product listing page
-entity.content.showProductInSubPagesFlag=Show product in sub pages
-entity.content.disableProductAssignmentFlag=Disable product assignment
 entity.content.defaultProductsPerPage=Default number of products per page
+entity.content.disableProductAssignmentFlag=Disable product assignment
+entity.content.productListingFlag=Use as a product listing page
+entity.content.restrictAccessFlag=Restrict access through subscription and/or purchase
+entity.content.showProductInSubPagesFlag=Show product in sub pages
+entity.content.templateFlag=Use this as a template for Product/Brand/Product Type
 entity.country.countryCode=Country Code
 entity.country.countryName=Country Name
 entity.creditcardtransaction.authorizationcode=Auth. Code
