Attribute set updates and other misc stuff.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Mar 22 13:14:48 EDT 2012
+#Thu Mar 22 15:09:35 EDT 2012
 admin.account=Account Manager
 admin.account.accounttabs.addresses=Addresses
 admin.account.accounttabs.carts=Carts
@@ -276,6 +276,7 @@ entity.accountaddress.accountAddressName=Nick Name
 entity.accountaddress.accountAddressType=Address Type
 entity.accountaddress.address=Address
 entity.accountaddress_plural=Account Addresses
+entity.accountattributeset=Account Attribute Set
 entity.accountemailaddress.account=Account
 entity.accountemailaddress.accountEmailAddressID=Account Email ID
 entity.accountemailaddress.emailaddress=Email Address
@@ -644,6 +645,8 @@ entity.productType.productTypeName=Product Type Name
 entity.productType.subProductTypes=subProductTypes
 entity.productType_plural=Product Types
 entity.product_plural=Products
+entity.productattributeset=Product Attribute Set
+entity.productcustomizationattributeset=Product Customization Attribute Set
 entity.productreview_plural=Product Reviews
 entity.profile.account=account
 entity.profile.profileID=profileID
