another dig at paid content, hopefully final!

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -388,6 +388,8 @@ entity.content.defaultProductsPerPage=Default number of products per page
 entity.content.disableProductAssignmentFlag=Disable product assignment
 entity.content.productListingFlag=Use as a product listing page
 entity.content.restrictAccessFlag=Restrict access through subscription and/or purchase
+entity.content.requirePurchaseFlag=Restrict access through purchase
+entity.content.requireSubscriptionFlag=Restrict access through subscription
 entity.content.showProductInSubPagesFlag=Show product in sub pages
 entity.content.templateFlag=Use this as a template for Product/Brand/Product Type
 entity.country.countryCode=Country Code
