--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -28,6 +28,9 @@ admin.define.edit_title=Edit ${itemEntityName}
 admin.define.list=${itemEntityName} Listing
 admin.define.list_nav=${itemEntityNamePlural}
 admin.define.list_title=View A List of ${itemEntityNamePlural}
+admin.define.save=Save ${itemEntityName}
+admin.define.save_nav=Save ${itemEntityName}
+admin.define.save_title=Save ${itemEntityName}
 admin.define.save_error=There was an error trying to save the ${itemEntityName}.
 admin.define.save_success=The ${itemEntityName} was saved sucessfully.
 admin.export.list=Export Entire List
@@ -826,7 +829,8 @@ entity.subscriptionbenefit=Subscription Benefit
 entity.subscriptionbenefit_plural=Subscription Benefits
 entity.subscriptionterm=Subscription Term
 entity.subscriptionterm_plural=Subscription Terms
-entity.taxCategory.taxCategoryName=Category Name
+entity.taxCategory.taxCategoryID=Tax Category ID
+entity.taxCategory.taxCategoryName=Tax Category Name
 entity.taxCategoryRate.addressZone=Address Zone
 entity.taxCategoryRate.taxRate=Tax Rate
 entity.taxcategory=Tax Category
