dialed in disabled alert, and confirm alert

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,4 @@
-#Created by JInto - www.guh-software.de
-#Thu Mar 22 15:09:35 EDT 2012
+
 admin.account=Account Manager
 admin.account.accounttabs.addresses=Addresses
 admin.account.accounttabs.carts=Carts
@@ -29,10 +28,10 @@ admin.define.list=${itemEntityName} Listing
 admin.define.list_nav=${itemEntityNamePlural}
 admin.define.list_title=View A List of ${itemEntityNamePlural}
 admin.define.save=Save ${itemEntityName}
-admin.define.save_nav=Save ${itemEntityName}
-admin.define.save_title=Save ${itemEntityName}
 admin.define.save_error=There was an error trying to save the ${itemEntityName}.
+admin.define.save_nav=Save ${itemEntityName}
 admin.define.save_success=The ${itemEntityName} was saved sucessfully.
+admin.define.save_title=Save ${itemEntityName}
 admin.export.list=Export Entire List
 admin.export.listfiltered=Export Filtered List
 admin.help=Help
@@ -197,10 +196,12 @@ define.all=All
 define.autoIncrement=Auto Increment
 define.backtolist=Back To List
 define.cancel=Cancel
+define.confirm=Confirm
 define.create=Create
 define.definedin=Defined In
 define.delete=Delete
 define.detail=Detail
+define.disabled=Disabled
 define.edit=Edit
 define.email=E-Mail
 define.exportlist=Export List
@@ -213,6 +214,7 @@ define.na=N/A
 define.no=No
 define.none=None
 define.notapplicable=N/A
+define.ok=Ok
 define.save=Save
 define.select=Select
 define.selectall=Select All
@@ -390,9 +392,9 @@ entity.content.contentID=Content ID
 entity.content.defaultProductsPerPage=Default number of products per page
 entity.content.disableProductAssignmentFlag=Disable product assignment
 entity.content.productListingFlag=Use as a product listing page
-entity.content.restrictAccessFlag=Restrict access through subscription and/or purchase
 entity.content.requirePurchaseFlag=Restrict access through purchase
 entity.content.requireSubscriptionFlag=Restrict access through subscription
+entity.content.restrictAccessFlag=Restrict access through subscription and/or purchase
 entity.content.showProductInSubPagesFlag=Show product in sub pages
 entity.content.templateFlag=Use this as a template for Product/Brand/Product Type
 entity.country.countryCode=Country Code
