more view changes

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -98,6 +98,7 @@ admin.setting.updatefrontendviews=Update All Frontend Views
 admin.setting.updatefrontendviews_confirm=ARE YOU 100% SURE YOU WANT TO UPDATE ALL OF YOUR CUSTOM VIEWS? YOU MAY LOSE YOUR CUSTOMIZATIONS
 admin.setting.updateproductcache=Update Product Cache
 admin.setting.updateslatwall=Update Slatwall
+admin.setting.updateslatwall_nav=Update Slatwall
 admin.setting.updateslatwall_confirm=ARE YOU SURE YOU WANT TO UPDATE SLATWALL
 admin.setting.updateslatwall_success=Slatwall updated successfully
 admin.setting_nav=Settings
@@ -715,6 +716,7 @@ entity.session.account=account
 entity.session.cart=cart
 entity.session.sessionID=sessionID
 entity.setting.global=Global Setting
+entity.setting=Setting
 entity.setting.settingID=settingID
 entity.setting.settingName=Setting Name
 entity.setting.settingValue=Setting Value
