some more UI work

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -718,6 +718,8 @@ entity.roundingrule_plural=Rounding Rules
 entity.session.account=account
 entity.session.cart=cart
 entity.session.sessionID=sessionID
+entity.setting=Setting
+entity.setting_plural=Settings
 entity.setting.global=Global Setting
 entity.setting.settingID=settingID
 entity.setting.settingName=Setting Name
