cleaned up setting view

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -385,6 +385,7 @@ entity.cartitem.quantity=quantity
 entity.cartitem.sku=sku
 entity.category=Category
 entity.category.categoryName=Category Name
+entity.category.allowProductAssignmentFlag=Allow Product Assignment
 entity.category.restrictAccessFlag=Restrict Access
 entity.category_plural=Categories
 entity.comment.comment=Comment
