Updates to vendor orders, and resolves issue #517

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -882,10 +882,12 @@ entity.vendorOrderitem.detail.extendedCost=Extended Cost
 entity.vendorOrderitem.quantityIn=Quantity In
 entity.vendorOrderitem.stockLocation=Location
 entity.vendor_plural=Vendors
+entity.vendoraddress=Address
 entity.vendoraddress.address=address
 entity.vendoraddress.vendor=vendor
 entity.vendoraddress.vendorAddressID=vendorAddressID
 entity.vendoraddress.vendorAddressType=vendorAddressType
+entity.vendoraddress_plural=Addresses
 entity.vendoremail.email=email
 entity.vendoremail.vendor=vendor
 entity.vendoremail.vendorEmailID=vendorEmailID
