Few changes to settings area

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -86,9 +86,8 @@ admin.setting.fulfillmentmethodtypes.shippingtabs.shippingmethods=Shipping Metho
 admin.setting.paymentmethodtypes.cashtabs.settings=Cash Settings
 admin.setting.paymentmethodtypes.creditcardtabs.settings=Credit Card Settings
 admin.setting.paymentmethodtypes.giftcardtabs.settings=Gift Card Settings
-admin.setting.settingtabs.advanced=Advanced Settings
+admin.setting.settingtabs.general=General Settings
 admin.setting.settingtabs.order=Order Settings
-admin.setting.settingtabs.product=Product Settings
 admin.setting.taxcategorytabs.rates=Tax Rates
 admin.setting.updateProductCache_success=Product Cache Update Started
 admin.setting.updateSkuCache=Update Sku Cache
@@ -931,10 +930,11 @@ setting.advanced=Advanced Settings
 setting.advanced.currencyLocale=Currency Locale
 setting.advanced.currencyType=Currency Type
 setting.advanced.dateFormat=Date Format
+setting.advanced.editRemoteIDFields=Edit RemoteID Fields in Administration
 setting.advanced.logDatabaseClearAfterDays=Number of days to maintain logs in Database
 setting.advanced.logExceptionsToDatabaseFlag=Log Unexpected Errors to Database
 setting.advanced.logMessages=Slatwall Application Logging
-setting.advanced.showRemoteIDFields=View RemoteID Fields in Administrator
+setting.advanced.showRemoteIDFields=View RemoteID Fields in Administration
 setting.advanced.timeFormat=Time Format
 setting.advanced.useProductCacheFlag=User Product Cache
 setting.advanced.useSkuCacheFlag=Use Sku Cache
