Added some settings

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -938,6 +938,8 @@ setting.advanced.currencyLocale=Currency Locale
 setting.advanced.currencyType=Currency Type
 setting.advanced.dateFormat=Date Format
 setting.advanced.editRemoteIDFields=Edit RemoteID Fields in Administration
+setting.advanced.encryptionKeySize=Encryption Key Size
+setting.advanced.encryptionKeyLocation=Encryption Key Location
 setting.advanced.logDatabaseClearAfterDays=Number of days to maintain logs in Database
 setting.advanced.logExceptionsToDatabaseFlag=Log Unexpected Errors to Database
 setting.advanced.logMessages=Slatwall Application Logging
