working on fulfillment methods

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -84,7 +84,9 @@ admin.setting.createaddresszonelocation=Add Location to Zone
 admin.setting.createaddresszonelocation_nav=Add Location to Zone
 admin.setting.default=Setting Dashboard
 admin.setting.deleteaddresszonelocation_success=The location has successfully been removed from this Address Zone.
+admin.setting.fulfillmentmethodtypes.pickuptabs.settings=Settings
 admin.setting.fulfillmentmethodtypes.shippingtabs.shippingmethods=Shipping Methods
+admin.setting.fulfillmentmethodtypes.shippingtabs.settings=Settings
 admin.setting.paymentmethodtypes.cashtabs.settings=Cash Settings
 admin.setting.paymentmethodtypes.creditcardtabs.settings=Credit Card Settings
 admin.setting.paymentmethodtypes.giftcardtabs.settings=Gift Card Settings
