some more work on vendor order

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -112,6 +112,9 @@ admin.vendor.vendortabs.vendoraddresses=Addresses
 admin.vendor.vendortabs.vendorbrands=Brands
 admin.vendor.vendortabs.vendororders=Orders
 admin.vendor_nav=Vendors
+admin.vendor.vendorordertabs.items=Order Items
+admin.vendor.vendorordertabs.products=Products
+admin.vendor.vendorordertabs.stockreceivers=Stock Receivers
 admin.warehouse=Warehouse Manager
 admin.warehouse_nav=Warehouse
 defaultMessage_Boolean={1} must be a valid boolean.
@@ -825,6 +828,8 @@ entity.stockreceiver=Stock Receiver
 entity.stockreceiver.boxCount=Box Count
 entity.stockreceiver.packingSlipNumber=Packing Slip Number
 entity.stockreceiver_plural=Stock Receivers
+entity.stockreceivervendororder.boxCount=Box Count
+entity.stockreceivervendororder.packingSlipNumber=Packing Slip Number
 entity.subscriptionBenefit.accessType=Access Type
 entity.subscriptionBenefit.categories=Categories
 entity.subscriptionBenefit.contents=Contents
@@ -890,9 +895,9 @@ entity.vendorOrder.vendorOrderNumber=Order Number
 entity.vendorOrder.vendorOrderType=Order Type
 entity.vendorOrder.vendorOrderid=Vendor Order ID
 entity.vendorOrder_plural=Vendor Orders
-entity.vendorOrderitem.detail.cost=Cost
-entity.vendorOrderitem.detail.extendedCost=Extended Cost
-entity.vendorOrderitem.quantityIn=Quantity In
+entity.vendorOrderitem.cost=Cost
+entity.vendorOrderitem.extendedCost=Extended Cost
+entity.vendorOrderitem.quantity=Quantity
 entity.vendorOrderitem.stockLocation=Location
 entity.vendor_plural=Vendors
 entity.vendoraddress=Address
