Started working on electronic fulfillment methods

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -227,6 +227,7 @@ define.no=No
 define.none=None
 define.notapplicable=N/A
 define.ok=Ok
+define.quantityshipped=Quantity Shipped
 define.save=Save
 define.select=Select
 define.selectall=Select All
