product type UI updates

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Mar 23 20:06:21 EDT 2012
+#Mon Mar 26 10:21:59 EDT 2012
 admin.account=Account Manager
 admin.account.accounttabs.addresses=Addresses
 admin.account.accounttabs.carts=Carts
@@ -72,7 +72,11 @@ admin.product.producttabs.productreviews=Product Reviews
 admin.product.producttabs.relatedproducts=Related Products
 admin.product.producttabs.settings=Settings
 admin.product.producttabs.skus=Skus
+admin.product.producttypetabs.attributesets=Attribute Sets
+admin.product.producttypetabs.products=Products
+admin.product.producttypetabs.settings=Settings
 admin.product_nav=Products
+admin.producttype.settingdefinedin=Setting Defined In
 admin.report=Reporting Services
 admin.report.order=Order Report
 admin.report_nav=Reporting
@@ -85,8 +89,8 @@ admin.setting.createaddresszonelocation_nav=Add Location to Zone
 admin.setting.default=Setting Dashboard
 admin.setting.deleteaddresszonelocation_success=The location has successfully been removed from this Address Zone.
 admin.setting.fulfillmentmethodtypes.pickuptabs.settings=Settings
-admin.setting.fulfillmentmethodtypes.shippingtabs.shippingmethods=Shipping Methods
 admin.setting.fulfillmentmethodtypes.shippingtabs.settings=Settings
+admin.setting.fulfillmentmethodtypes.shippingtabs.shippingmethods=Shipping Methods
 admin.setting.paymentmethodtypes.cashtabs.settings=Cash Settings
 admin.setting.paymentmethodtypes.creditcardtabs.settings=Credit Card Settings
 admin.setting.paymentmethodtypes.giftcardtabs.settings=Gift Card Settings
@@ -108,13 +112,13 @@ admin.setting.updateslatwall_nav=Update Slatwall
 admin.setting.updateslatwall_success=Slatwall updated successfully
 admin.setting_nav=Settings
 admin.vendor=Vendor Manager
+admin.vendor.vendorordertabs.items=Order Items
+admin.vendor.vendorordertabs.products=Products
+admin.vendor.vendorordertabs.stockreceivers=Stock Receivers
 admin.vendor.vendortabs.vendoraddresses=Addresses
 admin.vendor.vendortabs.vendorbrands=Brands
 admin.vendor.vendortabs.vendororders=Orders
 admin.vendor_nav=Vendors
-admin.vendor.vendorordertabs.items=Order Items
-admin.vendor.vendorordertabs.products=Products
-admin.vendor.vendorordertabs.stockreceivers=Stock Receivers
 admin.warehouse=Warehouse Manager
 admin.warehouse_nav=Warehouse
 defaultMessage_Boolean={1} must be a valid boolean.
@@ -220,8 +224,8 @@ define.general=General
 define.global=Global
 define.international=International
 define.local=Local
-define.modifiedDateTime=Modified on
 define.modifiedByAccount=Modified By
+define.modifiedDateTime=Modified on
 define.na=N/A
 define.no=No
 define.none=None
@@ -948,8 +952,8 @@ setting.advanced.currencyLocale=Currency Locale
 setting.advanced.currencyType=Currency Type
 setting.advanced.dateFormat=Date Format
 setting.advanced.editRemoteIDFields=Edit RemoteID Fields in Administration
-setting.advanced.encryptionKeySize=Encryption Key Size
 setting.advanced.encryptionKeyLocation=Encryption Key Location
+setting.advanced.encryptionKeySize=Encryption Key Size
 setting.advanced.logDatabaseClearAfterDays=Number of days to maintain logs in Database
 setting.advanced.logExceptionsToDatabaseFlag=Log Unexpected Errors to Database
 setting.advanced.logMessages=Slatwall Application Logging
